adding the contact form and the about section

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link rel="stylesheet" href="./styles/stylePage2.css">
+    <link rel="stylesheet" href="./styles/contact.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 </head>
 <body>
     <div class="header">
@@ -18,6 +20,76 @@
                 <li class="navbarItem active" ><a href="#">Contact</a></li>
             </ul>
             
+        </div>
+    </div>
+    <div class="container">
+        <div class="contactContainer">
+            <div class="cardHeader">
+               <div class="contactF">
+                <div class="contact">contact</div>
+                <div class="horizontalLine"></div>
+               </div>
+                <div class="contactMe">Contact Me</div>
+            </div>
+            <div class="contactForm">
+                <div class="adressContainer">
+                    <div class="icon"><i class=" iconFa fa-solid fa-location-dot"></i></div>
+                    <div class="adressDetails">
+                        <p class="addrTitle">My Adress</p>
+                        <p class="addrValue">Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                <div class="profileContainer">
+                    <div class="icon"><i class=" iconFa fa-solid fa-location-dot"></i></div>
+                    <div class="adressDetails">
+                        <p class="addrTitle">Social Profiles</p>
+                        <p class="socialValue">
+                            <i class="fa-brands fa-facebook"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-snapchat"></i>
+                            <i class="fa-brands fa-yahoo"></i>
+                        </p>
+                    </div>
+                </div>
+                <div class="emailContainer">
+                    <div class="icon"><i class="iconFa fa-regular fa-envelope"></i></div>
+                    <div class="adressDetails">
+                        <p class="addrTitle">Email</p>
+                        <p class="socialValue">
+                            emilyJones@gmail.com
+                        </p>
+                    </div>
+                </div>
+                <div class="callContainer">
+                    <div class="icon"><i class="iconFa fa-solid fa-phone fa-shake fa-xs" ></i></div>
+                    <div class="adressDetails">
+                        <p class="addrTitle">Phone Number</p>
+                        <p class="socialValue">
+                            +216 123 456 789 
+                        </p>
+                    </div>
+                </div>
+                <div class="form">
+                    <div class="yourName">
+                        <input type="text" class="textInput" placeholder="your name">
+                    </div>
+                    <div class="yourEmail">
+                        <input type="text" class="textInput" placeholder="your Email">
+                    </div>
+                    <div class="subject">
+                        <input type="text" class="textInput" placeholder="your subject">
+                    </div>
+                    <div class="message">
+                        <textarea class="textInput" name="message" id="message" rows="1" cols="10" >Your message
+                        </textarea>
+                        <button class="sendMessage">Send Message</button>
+                    </div>
+                </div>
+                <div class="button">
+                   
+                </div>
+            </div>
         </div>
     </div>
 </body>
