adding media query

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                             <span class="icon">&gt;</span><span class="desc">Freelance</span> Available
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas, reprehenderit neque at error ea iusto, quidem itaque quas voluptatem pariatur amet iste impedit eos accusantium hic placeat delectus libero quia?
+                    <p class="p3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas, reprehenderit neque at error ea iusto, quidem itaque quas voluptatem pariatur amet iste impedit eos accusantium hic placeat delectus libero quia?
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima blanditiis accusamus iure molestias ipsum sint reiciendis rem incidunt aliquam! In beatae laboriosam est odit amet possimus nihil perferendis provident distinctio.
                     </p>
                 </div>
